Add filemanager for uploads

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
-        "de-luxis/yii2-simple-filemanager": "^1.0"
+        "de-luxis/yii2-simple-filemanager": "^1.0",
+        "mihaildev/yii2-elfinder": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
@@ -35,7 +36,8 @@
         "yiisoft/yii2-imagine": "~2.2.0",
         "kartik-v/yii2-widget-fileinput": "@dev",
         "vova07/yii2-imperavi-widget": "*",
-        "jamband/yii2-schemadump": "^0.11.0"
+        "jamband/yii2-schemadump": "^0.11.0",
+        "mihaildev/yii2-elfinder": "*"
     },
     "config": {
         "process-timeout": 1800,
